force-app/main/default/objects/HRCFSL_SWORD__c/HRCFSL_SWORD__c.object-meta.xml
<CustomObject>
    <label>SWORD</label>
    <nameField>
        <label>SWORD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SWORD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>