force-app/main/default/objects/HRCFSL_SWORD__c/fields/HRCFSL_Allow_Multiple_Assets__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Allow_Multiple_Assets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Multiple Assets</label>
    <type>Checkbox</type>
</CustomField>