force-app/main/default/objects/HRCFSL_SWORD__c/fields/HRCFSL_Allow_PM_Overdue__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Allow_PM_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow PM Overdue</label>
    <type>Checkbox</type>
</CustomField>