force-app/main/default/objects/HRCFSL_SWORD__c/fields/HRCFSL_Allow_Tech_Gen__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Allow_Tech_Gen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Tech Gen</label>
    <type>Checkbox</type>
</CustomField>