force-app/main/default/objects/HRCFSL_SWORD__c/fields/HRCFSL_Equipment_Class022__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Equipment_Class022__c</fullName>
    <label>Equipment Class022</label>
    <length>255</length>
    <type>Text</type>
</CustomField>