force-app/main/default/objects/HRCFSL_SWORD__c/fields/HRCFSL_Req_Doc_Rev__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Req_Doc_Rev__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Req Doc Rev</label>
    <type>Checkbox</type>
</CustomField>