force-app/main/default/objects/HRCFSL_SWORD__c/fields/HRCFSL_Req_SO_To_Tech_Gen__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Req_SO_To_Tech_Gen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Req SO To Tech Gen</label>
    <type>Checkbox</type>
</CustomField>