force-app/main/default/objects/HRCFSL_SWORD__c/fields/HRCFSL_Require_Billing_On_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Require_Billing_On_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Billing On Date</label>
    <type>Checkbox</type>
</CustomField>