force-app/main/default/objects/HRCFSL_SWORD__c/fields/HRCFSL_Require_Contact__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Require_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Contact</label>
    <type>Checkbox</type>
</CustomField>