force-app/main/default/objects/HRCFSL_SWORD__c/fields/HRCFSL_Require_PO__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Require_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require PO</label>
    <type>Checkbox</type>
</CustomField>