force-app/main/default/objects/HRCFSL_SWORD__c/fields/HRCFSL_Require_Repair_Template__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Require_Repair_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Repair Template</label>
    <type>Checkbox</type>
</CustomField>