force-app/main/default/objects/HRCFSL_SWORD__c/fields/HRCFSL_Require_Ward__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Require_Ward__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HF-492 new SWORD rule that requires Ward to be populated for certain work types.</description>
    <label>Require Ward</label>
    <type>Checkbox</type>
</CustomField>