force-app/main/default/objects/HRCFSL_SWORD__c/fields/HRCFSL_Send_Code__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Send_Code__c</fullName>
    <label>Send Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>