force-app/main/default/objects/HRCFSL_SWORD__c/fields/HRCFSL_SN_Required_Complete__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_SN_Required_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SN Required Complete</label>
    <type>Checkbox</type>
</CustomField>