force-app/main/default/objects/HRCFSL_SWORD__c/fields/HRCFSL_SWORD_ID__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_SWORD_ID__c</fullName>
    <externalId>true</externalId>
    <label>SWORD ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>