force-app/main/default/objects/HRCFSL_SWORD__c/fields/HRCFSL_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>