force-app/main/default/objects/HRCFSL_SWORD__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HRCFSL_Allow_PM_Overdue__c</columns>
    <columns>HRCFSL_Allow_Tech_Gen__c</columns>
    <columns>HRCFSL_Req_SO_To_Tech_Gen__c</columns>
    <columns>HRCFSL_Require_Repair_Template__c</columns>
    <columns>HRCFSL_SWORD_ID__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>HRCFSL_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>